@startuml
title Class Diagram
class User{
    List<Route> routes
}

class Route {
    List<Destination> destinations
    String routeName
}

class Destination{
    List<OrderItem> orders
    String address
    String destinationName
}

Class OrderItem {
    int quantity
}

User --* Route 
Route --* Destination
Destination --* OrderItem

@enduml